fix: Improved legend vertical alignment (#235)
* fix(Legend): Improved legend vertical alignment

* fix: center chart tooltip marker

---------

--- a/src/internal/components/series-marker/styles.scss
+++ b/src/internal/components/series-marker/styles.scss
@@ -8,12 +8,13 @@
 
 $marker-size: 16px;
 $marker-inline-size: 25px; // marker-inline-size is greater than marker-size, to have space for the (potential) status marker.
-$marker-margin-top: cs.$space-static-xxxs;
 $marker-margin-right: cs.$space-static-xxs;
 
 .marker {
   @include styles.styles-reset;
-  margin-block-start: $marker-margin-top;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-start-start-radius: 2px;
   border-start-end-radius: 2px;
   border-end-start-radius: 2px;
